[project]
name = "ha-ledvance-lights"
version = "1.3.4"
description = "Home Assistant custom integration for Ledvance Smart+ WiFi lights"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "aiohttp>=3.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["custom_components"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "COM812",  # trailing comma (conflicts with formatter)
    "ISC001",  # implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
# Home Assistant integration files need runtime imports for HA framework types
"custom_components/**/*.py" = ["TC001", "TC002"]
# Web server uses print intentionally
"web/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.ha_ledvance_lights"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pytest-cov]
source = ["custom_components/ha_ledvance_lights"]
